--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-<html>
-  <head>
-    <link href="./styles.css" rel="stylesheet" />
-  </head>
-  <body>
-    <h1 class="title">hello world</h1>
-    <button id="btn-click-me">clickme</button>
-    <script src="./main.js"></script>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Welcome</title>
+</head>
+<body>
+    <h1>Welcome to My GitHub Page!</h1>
+    <p>This is a simple page created using GitHub Pages.</p>
+</body>
 </html>
